# GitInsight

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: analysis.py  client.py  config.py  display.py  main.py  report.py
src/gitinsight/: _async.py  analysis.py  client.py  config.py  main.py  report.py
