[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitinsight-py"
version = "1.1.0"
description = "A CLI tool to analyze GitHub profiles and generate Insight reports"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "fpdf2",
    "python-dotenv",
    "requests",
    "rich",
]

[project.scripts]
gitinsight = "gitinsight.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitinsight"]